--- a/Interface/index.html
+++ b/Interface/index.html
@@ -3,16 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <title>Traffic Monitor</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
 </head>
 <body>
-   
-       <h1>Traffic monitor</h1>
-       <h2> Team: BitsNBytes</h2>
-    <h3>Import a video file to find traffic</h3>
-<form action="/predict">
+       <header>
+           <h1>Traffic monitor <i class="fa fa-cogs" aria-hidden="true"></i> </h1>
+           <h2> Team: BitsNBytes</h2>
+       </header>
+       <div class="section-1">
+           
+       </div>
+    
+    <div align="center">
+         <h3>Import a video file to find traffic</h3>
+    <form action="/predict">
   <label for="myfile">Select a file:</label>
   <input type="file" id="myfile" name="myfile"><br><br>
   <input type="submit">
-</form>
+    </form>
+    </div>
+   
 </body>
 </html>
